css/styles.css
/* ... */
#image-2-5 {
  background: center/cover no-repeat url(../images/sharing_knowledge_with_farmers.jpg);
  background-blend-mode: multiply;
  background-color: rgb(179, 179, 179);
}

#image-2-5-1 {
  background: center/cover no-repeat url(../images/scholarships.jpg);
  background-blend-mode: multiply;
  background-color: rgb(179, 179, 179);
}

#image-2-5-2 {
  background: center/cover no-repeat url(../images/conferences.jpg);
  background-blend-mode: multiply;
  background-color: rgb(179, 179, 179);
}

#image-2-5-3 {
  background: center/cover no-repeat url(../images/learning_events.jpg);
  background-blend-mode: multiply;
  background-color: rgb(179, 179, 179);
}

#image-2-5-4 {
  background: center/cover no-repeat url(../images/workshops.jpg);
  background-blend-mode: multiply;
  background-color: rgb(179, 179, 179);
}

#image-2-5-5 {
  background: center/cover no-repeat url(../images/financial_support.jpg);
  background-blend-mode: multiply;
  background-color: rgb(179, 179, 179);
}

#image-3 {
  background: center/cover no-repeat url(../images/benefits.jpg);
  background-blend-mode: multiply;
  background-color: rgb(179, 179, 179);
}

#image-4 {
  background: center/cover no-repeat url(../images/join_us.jpg);
  background-blend-mode: multiply;
  background-color: rgb(179, 179, 179);
}

/* Mobile styles */

/* Banners & Images */

@media only screen and (min-device-width : 320px) and (max-device-width: 479px) {
  .banner-container {
    height: 70vw;
  }
  .special {
    display: block;
    margin-left: 0;
    max-width: 120px;
    margin-bottom: 10px;
    text-align: center;
  }

  .farm-grid,
  .grid-container-3,
  .grid-container-4 {
    display: grid;
    grid-template-columns: repeat(1, 1fr);
  }

  .farm-grid {
    padding: 5px;
  }
  
  .map {
    height: 20rem;
  }
  .card-image {
    height: 60vw;
  }
  .icons {
    flex-direction: column;
  }
}

@media only screen and (min-device-width: 480px) and (max-device-width: 767px){
  .banner-container {
    height: 45vw;
  }
  .special {
    display: block;
    margin-left: 0;
    max-width: 100px;
    text-align: center;
  }
  
  .map {
    height: 20rem;
  }

  .farm-grid {
    grid-template-columns: 1fr;
  }
  
  .grid-container-3,
  .grid-container-4 {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
  }
  .card-image {
    height: 35vw;
  }
}

@media only screen and (min-device-width: 768px) and (max-device-width: 1023px) {
  .banner-container {
    height: 60vw;
  }
  .special {
    display: block;
    margin-left: 0;
    max-width: 100px;
    text-align: center;
  }
  .farm-grid{
    grid-template-columns: repeat(2, 1fr);
    grid-gap: 10px;
  }
  .grid-container-3,
  .grid-container-4 {
    display: grid;
    grid-template-columns: repeat(1, 1fr);
    padding: 50px;
  }
  .card-image {
    height: 50vw;
  }
  .map {
    height: 30rem;
  }
}

@media only screen and (max-device-width: 1023px) {
  #team .col-lg-4 {
    text-align: center;
  }
  #team .col-lg-8 > h4 {
    text-align: center;
    margin: 1rem 0 2rem;
  }
}
/* ... */

